refactor(index.html): module loading
- basic jasmine test run in */index.html
- added npm scripts: build, test, start
- need to continue refactor and wire up karma

--- a/src/arrivalPie/index.html
+++ b/src/arrivalPie/index.html
@@ -29,6 +29,6 @@ Next step - put this thing on the page as a custom element using an html templat
   <li><a href="https://developers.google.com/web/fundamentals/getting-started/primers/customelements">https://developers.google.com/web/fundamentals/getting-started/primers/customelements</a></li>
 </ul>
 </section>
-<script src="./spec/arrivalPieSpec.js"></script>
+<script src="./spec/arrivalPieSpec.js" type="module"></script>
 </body>
 </html>
