--- a/src/test/index.html
+++ b/src/test/index.html
@@ -17,6 +17,6 @@
 </section>
 
 
-<script src="./spec/utilSpec.js"></script>
+<script src="./spec/utilSpec.js" type="module"></script>
 </body>
 </html>
