--- a/src/test/test.template.html
+++ b/src/test/test.template.html
@@ -1,7 +1,7 @@
 
 <link rel="stylesheet" type="text/css" href="/3rdParty/jasmine-core/lib/jasmine-core/jasmine.css">
 
-<script src="/test/util.js"></script>
+<script src="/test/util.js" type="module"></script>
 
 <script src="/3rdParty/jasmine-core/lib/jasmine-core/jasmine.js"></script>
 <script src="/3rdParty/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
