fix(lit-html): compilets and karma running
still need more work for tests, CSS, etc

--- a/src/@littleware/little-elements/lib/index.html
+++ b/src/@littleware/little-elements/lib/index.html
@@ -5,6 +5,7 @@
         
  {% include "styleGuide/styleGuide.template.html" %}
 
+ <script type="module" src="testMain.js"></script>
     </head>
     <body>
         <header>
@@ -16,6 +17,9 @@
                 <li><a href="./test/index.html">little test utils</a></li>
                 <li><a href="./arrivalPie/index.html">little arrival pie</a></li>
             </ul>
+        </section>
+        <section id="testSuite">
+
         </section>
     </body>
 </html>
