chore(lit-html): styleGuide init integration

--- a/src/@littleware/little-elements/lib/styleGuide/index.html
+++ b/src/@littleware/little-elements/lib/styleGuide/index.html
@@ -2,9 +2,7 @@
 <html>
     <head>
         <title>littleware style guide</title>
-        
- {% include "styleGuide/styleGuide.template.html" %}
-
+ 
     </head>
     <body>
         <header>
@@ -52,7 +50,7 @@
                 </div>
             </div>
 
-            <script src="demo.js"></script>
+            <script src="demo.js" type="module"></script>
                 
         </section>
     </body>
