chore(styleGuide): lit-html, css integration

--- a/src/@littleware/little-elements/lib/test/index.html
+++ b/src/@littleware/little-elements/lib/test/index.html
@@ -3,9 +3,6 @@
 <head>
 <title>littleware.test</title>
 
- {% include "styleGuide/styleGuide.template.html" %}
- {% include "test/test.template.html" %}
-
 </head>
 <body class="lw-content">
 
@@ -16,7 +13,6 @@
   {% endmarkdown %}
 </section>
 
-
-<script src="./spec/utilSpec.js" type="module"></script>
+<script src="./spec/main.js" type="module"></script>
 </body>
 </html>
