--- a/src/@littleware/little-elements/lib/test/test.template.html
+++ b/src/@littleware/little-elements/lib/test/test.template.html
@@ -1,8 +1,6 @@
 
-<link rel="stylesheet" type="text/css" href="/3rdParty/jasmine-core/lib/jasmine-core/jasmine.css">
+<link rel="stylesheet" type="text/css" href="/modules/jasmine-core/lib/jasmine-core/jasmine.css" />
 
-<script src="/test/util.js" type="module"></script>
-
-<script src="/3rdParty/jasmine-core/lib/jasmine-core/jasmine.js"></script>
-<script src="/3rdParty/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
-<script src="/3rdParty/jasmine-core/lib/jasmine-core/boot.js"></script>
+<script src="/modules/jasmine-core/lib/jasmine-core/jasmine.js"></script>
+<script src="/modules/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
+<script src="/modules/jasmine-core/lib/jasmine-core/boot.js"></script>
