fix(tests): test suite working

--- a/src/@littleware/little-elements/lib/arrivalPie/index.html
+++ b/src/@littleware/little-elements/lib/arrivalPie/index.html
@@ -3,7 +3,10 @@
 <head>
 <title>ClockView Canvas</title>
 
- {% include "test/test.template.html" %}
+<link rel="stylesheet" type="text/css" href="../../../../jasmine-core/lib/jasmine-core/jasmine.css" />
+<script src="../../../../jasmine-core/lib/jasmine-core/jasmine.js"></script>
+<script src="../../../../jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
+<script src="../test/littleJasmineBoot.js"></script>
 
 </head>
 <body class="lw-content">
@@ -27,6 +30,6 @@ Next step - put this thing on the page as a custom element using an html templat
   <li><a href="https://developers.google.com/web/fundamentals/getting-started/primers/customelements">https://developers.google.com/web/fundamentals/getting-started/primers/customelements</a></li>
 </ul>
 </section>
-<script src="./spec/arrivalPieSpec.js" type="module"></script>
+<script src="./spec/main.js" type="module"></script>
 </body>
 </html>
