--- a/src/@littleware/little-elements/lib/index.html
+++ b/src/@littleware/little-elements/lib/index.html
@@ -3,8 +3,11 @@
     <head>
         <title>littleware style guide</title>
         
- 
-        <script type="module" src="testMain.js"></script>
+        <link rel="stylesheet" type="text/css" href="../../../jasmine-core/lib/jasmine-core/jasmine.css" />
+        <script src="../../../jasmine-core/lib/jasmine-core/jasmine.js"></script>
+        <script src="../../../jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
+        <script src="./test/littleJasmineBoot.js"></script>
+        
     </head>
     <body>
         <header>
@@ -20,5 +23,7 @@
         <section id="testSuite">
 
         </section>
+
+        <script type="module" src="./testMain.js"></script>
     </body>
 </html>
