--- a/src/@littleware/little-elements/lib/styleGuide/index.html
+++ b/src/@littleware/little-elements/lib/styleGuide/index.html
@@ -3,6 +3,11 @@
     <head>
         <title>littleware style guide</title>
  
+        <link rel="stylesheet" type="text/css" href="../../../../jasmine-core/lib/jasmine-core/jasmine.css" />
+        <script src="../../../../jasmine-core/lib/jasmine-core/jasmine.js"></script>
+        <script src="../../../../jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
+        <script src="../test/littleJasmineBoot.js"></script>
+
     </head>
     <body>
         <header>
