--- a/src/@littleware/little-elements/lib/test/index.html
+++ b/src/@littleware/little-elements/lib/test/index.html
@@ -3,11 +3,15 @@
 <head>
 <title>littleware.test</title>
 
+<link rel="stylesheet" type="text/css" href="../../../../jasmine-core/lib/jasmine-core/jasmine.css" />
+<script src="../../../../jasmine-core/lib/jasmine-core/jasmine.js"></script>
+<script src="../../../../jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
+<script src="./littleJasmineBoot.js"></script>
+
 </head>
 <body class="lw-content">
 
 <section id="README">
-
   {% markdown %}
      {% include "test/README.md" %}
   {% endmarkdown %}
