fix(gitignore): everything busted
was leaving out a lot of files due to lib/ rule
in .gitignore

--- a/src/@littleware/little-elements/lib/styleGuide/index.html
+++ b/src/@littleware/little-elements/lib/styleGuide/index.html
@@ -56,7 +56,7 @@
             </div>
 
             <script src="demo.js" type="module"></script>
-                
+            <script src="spec/main.js" type="module"></script>  
         </section>
     </body>
 </html>
