--- a/src/@littleware/little-elements/lib/test/index.html
+++ b/src/@littleware/little-elements/lib/test/index.html
@@ -13,7 +13,7 @@
 
 <section id="README">
   {% markdown %}
-     {% include "test/README.md" %}
+     {% include "lib/test/README.md" %}
   {% endmarkdown %}
 </section>
 
