--- a/src/@littleware/little-elements/lib/styleGuide/index.html
+++ b/src/@littleware/little-elements/lib/styleGuide/index.html
@@ -3,9 +3,9 @@
 {% block head %}
 <title>littleware style guide</title>
  
-<link rel="stylesheet" type="text/css" href="../../../../jasmine-core/lib/jasmine-core/jasmine.css" />
-<script src="../../../../jasmine-core/lib/jasmine-core/jasmine.js"></script>
-<script src="../../../../jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
+<link rel="stylesheet" type="text/css" href="/modules/jasmine-core/lib/jasmine-core/jasmine.css" />
+<script src="/modules/jasmine-core/lib/jasmine-core/jasmine.js"></script>
+<script src="/modules/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
 <script src="../test/littleJasmineBoot.js"></script>
 
 {% endblock %}
