fix(testMain): launch on load, add mutexHelperSpec

--- a/src/@littleware/little-elements/lib/index.html
+++ b/src/@littleware/little-elements/lib/index.html
@@ -1,9 +1,11 @@
+{% extends "lib/styleGuide/shell/basicShell.html.njk" %}
+
 {% block head %}
-       <title>littleware style guide</title>
+       <title>littleware web components</title>
         
-        <link rel="stylesheet" type="text/css" href="../../../jasmine-core/lib/jasmine-core/jasmine.css" />
-        <script src="../../../jasmine-core/lib/jasmine-core/jasmine.js"></script>
-        <script src="../../../jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
+        <link rel="stylesheet" type="text/css" href="/modules/jasmine-core/lib/jasmine-core/jasmine.css" />
+        <script src="/modules/jasmine-core/lib/jasmine-core/jasmine.js"></script>
+        <script src="/modules/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
         <script src="./test/littleJasmineBoot.js"></script>
 {% endblock %}
 
