--- a/src/@littleware/little-elements/lib/index.html
+++ b/src/@littleware/little-elements/lib/index.html
@@ -17,6 +17,7 @@
                 <li><a href="./styleGuide/index.html">little style guide</a></li>
                 <li><a href="./test/index.html">little test utils</a></li>
                 <li><a href="./arrivalPie/index.html">little arrival pie</a></li>
+                <li><a href="./authMgr/index.html">little auth manager</a></li>
             </ul>
         </section>
         <section id="testSuite">
