chore(lw-app-context): working on web runtime

--- a/src/@littleware/little-elements/lib/appContext/index.html
+++ b/src/@littleware/little-elements/lib/appContext/index.html
@@ -19,10 +19,10 @@
 <section>
 
 <p> Here is the lw-app-context custom element </p>
-<lw-app-context></lw-app-context>
-
+<lw-app-context main-module="./spec/main.js"></lw-app-context>
 
 </section>
-<script src="./spec/main.js" type="module"></script>
+<script src="./appContext.js" type="module"></script>
+
 {% endblock %}
 
