chore(menu): drop down pass basic tests

--- a/src/@littleware/little-elements/lib/authMgr/index.html
+++ b/src/@littleware/little-elements/lib/authMgr/index.html
@@ -21,7 +21,9 @@
 <p> Here is the lw-auth-mgr custom element </p>
 <lw-auth-mgr></lw-auth-mgr>
 
+<lw-app-context main-module="./spec/main.js"></lw-app-context>
 
 </section>
-<script src="./spec/main.js" type="module"></script>
+<script src="../appContext/appContext.js" type="module"></script>
+
 {% endblock %}
