chore(drop-down): support model set

--- a/src/@littleware/little-elements/lib/littleDropDown/index.html
+++ b/src/@littleware/little-elements/lib/littleDropDown/index.html
@@ -1,7 +1,7 @@
 {% extends "lib/styleGuide/shell/basicShell.html.njk" %}
 
 {% block head %}
-<title>PureMenu UX Canvas</title>
+<title>littleDropDown UX Canvas</title>
 
 <link rel="stylesheet" type="text/css" href="/modules/jasmine-core/lib/jasmine-core/jasmine.css" />
 <script src="/modules/jasmine-core/lib/jasmine-core/jasmine.js"></script>
@@ -12,13 +12,13 @@
 {% block content %}
 <section id="README">
   {% markdown %}
-     {% include "lib/pureMenu/README.md" %}
+     {% include "lib/littleDropDown/README.md" %}
   {% endmarkdown %}
 </section>
 
 <section>
 
-<p> Here is the lw-pure-menu custom element </p>
+<p> Here is the lw-drop-down custom element </p>
 <lw-drop-down 
   context="little-elements/lw-drop-down/spec/testConfig"
   >
