chore(authControl): initial element

--- a/src/@littleware/little-elements/lib/authMgr/index.html
+++ b/src/@littleware/little-elements/lib/authMgr/index.html
@@ -18,8 +18,8 @@
 
 <section>
 
-<p> Here is the lw-auth-mgr custom element </p>
-<lw-auth-mgr></lw-auth-mgr>
+<p> Here is the lw-auth-ui custom element </p>
+<lw-auth-ui></lw-auth-ui>
 
 <lw-app-context main-module="./spec/main.js"></lw-app-context>
 
