chore(appContext): web HOSTNAME config handling

--- a/src/@littleware/little-elements/lib/appContext/index.html
+++ b/src/@littleware/little-elements/lib/appContext/index.html
@@ -19,7 +19,7 @@
 <section>
 
 <p> Here is the lw-app-context custom element </p>
-<lw-app-context main-module="./spec/main.js"></lw-app-context>
+<lw-app-context main-module="./spec/main.js" config-href="./spec/test-config.json"></lw-app-context>
 
 </section>
 <script src="./appContext.js" type="module"></script>
