fix(lw-header): web-comp race condition

--- a/src/@littleware/little-elements/lib/index.html
+++ b/src/@littleware/little-elements/lib/index.html
@@ -18,7 +18,8 @@
                 <li><a href="./test/index.html">little test utils</a></li>
                 <li><a href="./arrivalPie/index.html">little arrival pie</a></li>
                 <li><a href="./authMgr/index.html">little auth manager</a></li>
-                <li><a href="./littleDropDown/index.html">little pure menu</a></li>
+                <li><a href="./littleDropDown/index.html">little drop-down menu</a></li>
+                <li><a href="./littleHeader/index.html">little header</a></li>
             </ul>
         </section>
         <section id="testSuite">
