--- a/src/@littleware/little-elements/lib/littleHeader/index.html
+++ b/src/@littleware/little-elements/lib/littleHeader/index.html
@@ -82,6 +82,6 @@
   </section>
 </div>
 
-<lw-app-context main-module="./spec/main.js"></lw-app-context>
+<lw-app-context main-module="./spec/main.js" config-href="./spec/test-config.json"></lw-app-context>
 <script type="module" src="../appContext/appContext.js"></script>
 {% endblock %}
